# smart-shop

./: Cargo.toml  README.md
air_quality/: Cargo.toml
air_quality/src/: lib.rs
display/: Cargo.toml
display/src/: lib.rs
env_sensor/: Cargo.toml
env_sensor/.cargo/: config.toml
env_sensor/src/: board.rs  bsp.rs  main.rs
lora/: Cargo.toml
lora/src/: lib.rs
lora_radio/: Cargo.toml
lora_radio/src/: lib.rs
sht30/: Cargo.toml
sht30/src/: lib.rs
src/: board.rs  bsp.rs  main.rs  radio.rs  shared.rs  sht30.rs
