[package]
name = "adafruit_feather_rp2040_rfm95_quickstart"
version = "0.1.0"
edition = "2024"

[dependencies]
assign-resources = "0.4.1"
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.4.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-usb-logger = "0.4.0"
log = "0.4.27"
panic-halt = "1.0.0"
pmsa003i = { version = "0.1.11", features = ["async"] }
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"