[workspace]
members = ["env_sensor", "sht30"]
resolver = "2"

[workspace.dependencies]
assign-resources = "0.4.1"
cortex-m-rt = "0.7.5"
crc = "3.3.0"
embassy-embedded-hal = "0.3.0"
embassy-executor = "0.7.0"
embedded-hal-async = "1.0.0"
embassy-futures = "0.1.1"
embassy-rp = "0.4.0"
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-usb-logger = "0.4.0"
log = "0.4.27"
lora-phy = "3.0.1"
packed_struct = { version = "0.10.1", default-features = false }
panic-halt = "1.0.0"
pmsa003i = "0.1.11"
portable-atomic = "1.11.0"
sht30 = { path = "sht30" }
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"