[package]
name = "air_quality"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal-async = { workspace = true }
pmsa003i = { version = "0.1.11", features = ["async"] }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1", "embedded-hal-async"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }