[package]
name = "env_sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true, features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-usb-logger = { workspace = true }
lora = { workspace = true }
log = { workspace = true }
packed_struct = { workspace = true, default-features = false }
panic-halt = { workspace = true }
pmsa003i = { workspace = true, features = ["async"] }
portable-atomic = { workspace = true, features = ["critical-section"] }
sht30 = { workspace = true }
static_cell = { workspace = true }