[package]
name = "sht30"
version = "0.1.0"
edition = "2024"

[dependencies]
crc = { workspace = true }
embedded-hal-async = { workspace = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1", "embedded-hal-async"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }